fix elements that are too wide: see https://github.com/LukasJoswiak/etch/issues/20

--- a/assets/css/min770px.css
+++ b/assets/css/min770px.css
@@ -5,7 +5,6 @@ body {
 }
 
 main#content hr {
-    width: 108%;
     margin-left: -3.8%;
 }
 
@@ -31,22 +30,11 @@ main#content header#post-header h1 {
     font-size: 2.4rem;
 }
 
-main#content img {
-    max-width: 108%;
+main#content img {   
     margin-left: -3.8%;
-}
-
-main#content figure {
-    margin-left: -3.8%;
-}
-
-main#content figure img {
-    max-width: 108%;
 }
 
 main#content pre {
-    width: 108%;
-    margin-left: -3.8%;
     padding: 1.5rem 2.2rem;
 }
 }
